Avoid horizontal scroll of task-wrapper

--- a/src/styles/task.css
+++ b/src/styles/task.css
@@ -77,6 +77,7 @@ main.project-panel > .content {
     height: 82lvh;
     
     overflow-y: scroll;
+    overflow-x: visible;
     /*Hide scrollbar*/
     scrollbar-width: thin;
     scrollbar-color: rgba(255, 255, 255, 0.139) transparent;
@@ -98,6 +99,7 @@ main.project-panel > .content {
 .task-wrapper {
     border-bottom: 1px solid #ececec7a;
     padding-bottom: 0.5rem;
+    padding-right: 0.5rem;
 
     display: grid;
     grid-template-columns: 1rem 1fr 1.2rem;
